--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,18 @@
     <title>FindTab Search Popup</title>
     <style>
         body {
+            margin: 0;
+            margin-left: 10px;
             min-width: 400px;
             font-size: 15px;
         }
 
         h3 {
             border-bottom: solid 1px dimgray;
+        }
+
+        img {
+            float: left;
         }
 
         div {
@@ -27,12 +33,13 @@
         input[type='text'] {
             float: left;
             margin-left: 10px;
-            width: 200px;
+            width: 70%;
             vertical-align: middle;
         }
 
         button {
             float: left;
+            margin-left: 10px;
             vertical-align: middle;
         }
 
@@ -43,7 +50,7 @@
 <body>
     <h3>FindTab</h3>
     <div>
-        <p>Search for:</p>
+        <img src="fticon.png" />
         <input type="text" id="searchFor"/>
         <button id="searchButton">Search</button>
     </div>
