--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,7 @@
             padding-top: 0px;
             margin-top: 0px;
             height: 20px;
+            margin-bottom: 20px;
         }
 
         p {
