--- a/popup.html
+++ b/popup.html
@@ -73,7 +73,7 @@
     <script src="popup.js" defer="true"></script>
 </head>
 <body>
-    <h3>FindTab</h3>
+    <h3>TabFind</h3>
     <div class="searchArea">
         <img src="fticon.png" />
         <input type="text" id="searchFor"/>
